[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traktor-tsi"
version = "0.1.0"
description = "Python library for reading and writing Native Instruments Traktor Pro TSI mapping files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "trosha_b"},
]
keywords = ["traktor", "native-instruments", "tsi", "midi", "dj", "controller-mapping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/troshababy/py-ni-traktor-tsi"
