[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ni-traktor-tsi"
version = "0.1.1"
description = "Python library for reading and writing Native Instruments Traktor Pro TSI mapping files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "trosha_b"},
]
keywords = ["traktor", "native-instruments", "tsi", "midi", "dj", "controller-mapping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/troshab/py-ni-traktor-tsi"
